tests/baselines/reference/declFileObjectLiteralWithOnlySetter.errors.txt
tests/cases/compiler/declFileObjectLiteralWithOnlySetter.ts(5,13): error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.


==== tests/cases/compiler/declFileObjectLiteralWithOnlySetter.ts (1 errors) ====
    
    function /*1*/makePoint(x: number) { 
        return {
            b: 10,
            set x(a: number) { this.b = a; }
                ~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
        };
    };
    var /*3*/point = makePoint(2);
    point./*2*/x = 30;